[gd_scene load_steps=6 format=3 uid="uid://cf24r6yierbwv"]

[ext_resource type="Script" path="res://Menu/Scripts/Main_Menu.gd" id="1_pto56"]
[ext_resource type="Texture2D" uid="uid://cu27r5ffll3kc" path="res://Menu/Textures/Title_Screen.png" id="2_8mwko"]
[ext_resource type="FontFile" uid="uid://b2mypsnhr840a" path="res://Fonts/PressStart2P-Regular.ttf" id="3_ps5g2"]
[ext_resource type="FontFile" uid="uid://bru4ckd1tof86" path="res://Fonts/Kanit-Bold.ttf" id="4_758ml"]
[ext_resource type="Texture2D" uid="uid://bx805g5kyisdb" path="res://Menu/Textures/Button_Border_Regular.png" id="5_2r3wn"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pto56")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8mwko")

[node name="Content_MContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Title_VBContainer" type="VBoxContainer" parent="Content_MContainer"]
layout_mode = 2
theme_override_constants/separation = 65

[node name="Seperator" type="Control" parent="Content_MContainer/Title_VBContainer"]
layout_mode = 2

[node name="Title_Label" type="Label" parent="Content_MContainer/Title_VBContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("3_ps5g2")
theme_override_font_sizes/font_size = 64
text = "Hexapawn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_HBContainer" type="HBoxContainer" parent="Content_MContainer"]
layout_mode = 2
alignment = 1

[node name="Button_VBContainer" type="VBoxContainer" parent="Content_MContainer/Button_HBContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Seperator_1" type="Control" parent="Content_MContainer/Button_HBContainer/Button_VBContainer"]
layout_mode = 2

[node name="Seperator_2" type="Control" parent="Content_MContainer/Button_HBContainer/Button_VBContainer"]
layout_mode = 2

[node name="Play_Button" type="Button" parent="Content_MContainer/Button_HBContainer/Button_VBContainer"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("4_758ml")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="Button_Border" type="Sprite2D" parent="Content_MContainer/Button_HBContainer/Button_VBContainer/Play_Button"]
position = Vector2(70, 28)
texture = ExtResource("5_2r3wn")
metadata/_edit_lock_ = true

[node name="Options_Buttons" type="Button" parent="Content_MContainer/Button_HBContainer/Button_VBContainer"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("4_758ml")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Button_Border" type="Sprite2D" parent="Content_MContainer/Button_HBContainer/Button_VBContainer/Options_Buttons"]
position = Vector2(70, 28)
texture = ExtResource("5_2r3wn")
metadata/_edit_lock_ = true

[node name="Exit_Button" type="Button" parent="Content_MContainer/Button_HBContainer/Button_VBContainer"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("4_758ml")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="Button_Border" type="Sprite2D" parent="Content_MContainer/Button_HBContainer/Button_VBContainer/Exit_Button"]
position = Vector2(70, 28)
texture = ExtResource("5_2r3wn")
metadata/_edit_lock_ = true

[connection signal="button_down" from="Content_MContainer/Button_HBContainer/Button_VBContainer/Play_Button" to="." method="on_play_pressed"]
[connection signal="button_down" from="Content_MContainer/Button_HBContainer/Button_VBContainer/Options_Buttons" to="." method="on_options_pressed"]
[connection signal="button_down" from="Content_MContainer/Button_HBContainer/Button_VBContainer/Exit_Button" to="." method="on_exit_pressed"]
